# ChangeLog for app-emulation/fs-uae-launcher
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*fs-uae-launcher-2.2.2 (06 May 2013)

  06 May 2013; Michał Ziąbkowski <mziab@o2.pl> +fs-uae-launcher-2.2.2.ebuild:
  Bumped.

*fs-uae-launcher-2.2.0 (17 Apr 2013)

  17 Apr 2013; Michał Ziąbkowski <mziab@o2.pl> +fs-uae-launcher-2.2.0.ebuild:
  Bumped.

*fs-uae-launcher-2.1.32 (09 Mar 2013)

  09 Mar 2013; Michał Ziąbkowski <mziab@o2.pl>
  +fs-uae-launcher-2.1.32.ebuild:
  Bumped. Hopefully fixed python deps.

  16 Feb 2013; Michał Ziąbkowski <mziab@o2.pl> fs-uae-launcher-2.0.1.ebuild,
  fs-uae-launcher-2.1.9.ebuild, fs-uae-launcher-2.1.23.ebuild,
  fs-uae-launcher-2.1.27.ebuild:
  Added ~amd64 keyword.

*fs-uae-launcher-2.1.27 (14 Feb 2013)

  14 Feb 2013; Michał Ziąbkowski <mziab@o2.pl>
  +fs-uae-launcher-2.1.27.ebuild:
  Bumped.

*fs-uae-launcher-2.1.23 (31 Jan 2013)

  31 Jan 2013; Michał Ziąbkowski <mziab@o2.pl>
  +fs-uae-launcher-2.1.23.ebuild:
  Bumped.

*fs-uae-launcher-2.1.9 (24 Jan 2013)

  24 Jan 2013; Michał Ziąbkowski <mziab@o2.pl> +fs-uae-launcher-2.1.9.ebuild:
  Bumped.

*fs-uae-launcher-2.0.1 (12 Jan 2013)

  12 Jan 2013; Michał Ziąbkowski <mziab@o2.pl> +fs-uae-launcher-2.0.1.ebuild,
  +metadata.xml:
  New ebuild.
