@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*fs-uae-launcher-2.2.2-r1 (14 May 2013)
+
+  14 May 2013; Michał Ziąbkowski <mziab@o2.pl>
+  +fs-uae-launcher-2.2.2-r1.ebuild:
+  Rev-bump with port to distutils-r1.
+
 *fs-uae-launcher-2.2.2 (06 May 2013)
 
   06 May 2013; Michał Ziąbkowski <mziab@o2.pl> +fs-uae-launcher-2.2.2.ebuild:
